It is finished.

--- a/development/index.html
+++ b/development/index.html
@@ -24,7 +24,7 @@
           <h2>Sport Scope 30'</h2>
         </div>
         <div class="panel-body">
-          <div class="col-md-6">
+          <div class="col-md-6 col-sm-6">
             <ul class="featured-list">
               <li>Automatic Camera Controls</li>
               <li>30 ft. Extended Height</li>
@@ -37,12 +37,13 @@
             <a href="./products.html" type="button" class="btn btn-sm btn-features">Made in the USA</a>
             <a href="./products.html" type="button" class="btn btn-sm btn-features">Hudl ready</a>
           </div>
-          <div class="col-md-6 center">
+          <div class="col-md-6 col-sm-6">
+            <div class="center">
             <h3 class="offer">$300 off</h3><h4 class="offer"> your 30' endzone camera order!</h4>
             <h2>$4,199</h2>
             <h6>(Offer through March 31, 2016)</h6>
             <a href="./sport-scope-30.html" class="btn btn-default">Learn More</a>
-
+          </div>
           </div>
 
         </div>
