--- a/development/press-box.html
+++ b/development/press-box.html
@@ -31,13 +31,11 @@
 
       <div class="col-md-6">
         <div class="row title">
-          <div class="col-md-9">
+          <div class="col-md-12">
             <h1>Press Box Tripod
             </h1>
           </div>
-          <div class="col-md-3">
-            <button type="button" class="btn btn-primary btn-lg btn-order">Order Now</button>
-          </div>
+
         </div>
         <div class="row">
           <div class="col-md-12">
@@ -57,6 +55,7 @@
               <div class="col-md-6">
                 <h2>$499</h2>
                 <p>Call to add camera</p>
+                <form action="https://www.paypal.com/cgi-bin/webscr" method="post" target="paypal"><input name="cmd" type="hidden" value="_cart"> <input name="business" type="hidden" value="info@sportscopevideo.com"> <input name="lc" type="hidden" value="US"> <input name="item_name" type="hidden" value="Press Box Camera"> <input name="amount" type="hidden" value="499.00"> <input name="currency_code" type="hidden" value="USD"> <input name="button_subtype" type="hidden" value="products"> <input name="no_note" type="hidden" value="0"> <input name="shipping" type="hidden" value="25.00"> <input name="add" type="hidden" value="1"> <input name="bn" type="hidden" value="PP-ShopCartBF:order.png:NonHostedGuest"> <input alt="PayPal - The safer, easier way to pay online!" name="submit" src="img/order.svg" type="image"></form>
               </div>
             </div>
           </div>
@@ -84,11 +83,13 @@
       <!-- /.panel-group -->
         <div class="panel-group" id="accordion">
                     <div class="panel panel-default">
+                      <a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion" href="#collapseOne">
                         <div class="panel-heading">
                             <h4 class="panel-title">
-                                <a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion" href="#collapseOne">Tripod Stand</a>
+                                Tripod Stand
                             </h4>
                         </div>
+                      </a>
                         <div id="collapseOne" class="panel-collapse collapse">
                             <div class="panel-body">
                                 <img src="./img/pressBox/Tripod2.JPG" alt="">
@@ -97,11 +98,13 @@
                     </div>
                     <!-- /.panel -->
                     <div class="panel panel-default">
+                      <a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion" href="#collapseTwo">
                         <div class="panel-heading">
                             <h4 class="panel-title">
-                                <a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion" href="#collapseTwo">Camera Remote</a>
+                                Camera Remote
                             </h4>
                         </div>
+                      </a>
                         <div id="collapseTwo" class="panel-collapse collapse">
                             <div class="panel-body">
                                 <img src="./img/pressBox/Tripodremotes.png" alt=""> 
@@ -111,11 +114,13 @@
 
                     <!-- /.panel -->
                     <div class="panel panel-default">
+                      <a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion" href="#collapseThree">
                         <div class="panel-heading">
                             <h4 class="panel-title">
-                                <a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion" href="#collapseThree">9" HD Monitor</a>
+                                9" LCD Monitor
                             </h4>
                         </div>
+                      </a>
                         <div id="collapseThree" class="panel-collapse collapse">
                             <div class="panel-body">
                                 <img src="./img/pressBox/Tripodmonitor.png" alt="">
@@ -129,11 +134,13 @@
 
                     <!-- /.panel -->
                     <div class="panel panel-default">
+                      <a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion" href="#collapseFour">
                         <div class="panel-heading">
                             <h4 class="panel-title">
-                                <a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion" href="#collapseFour">Mount Plate</a>
+                                Mount Plate
                             </h4>
                         </div>
+                      </a>
                         <div id="collapseFour" class="panel-collapse collapse">
                             <div class="panel-body">
                                 <img src="./img/pressBox/Tripodmount.JPG" alt="">
@@ -145,11 +152,13 @@
 
                     <!-- /.panel -->
                     <div class="panel panel-default">
+                      <a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion" href="#collapseFive">
                         <div class="panel-heading">
                             <h4 class="panel-title">
-                                <a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion" href="#collapseFive">Tripod Bag</a>
+                                Tripod Bag
                             </h4>
                         </div>
+                      </a>
                         <div id="collapseFive" class="panel-collapse collapse">
                             <div class="panel-body">
                                 <img src="./img/pressBox/Tripodbag.JPG" alt="">   
