--- a/development/quick-scope-16.html
+++ b/development/quick-scope-16.html
@@ -26,19 +26,17 @@
     <div class="row">
 
       <div class="col-md-6">
-        <iframe src="https://player.vimeo.com/video/158362960" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
+        <iframe src="https://player.vimeo.com/video/158362960" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen class="iframe-lg"></iframe>
       </div>
 
       <div class="col-md-6">
         <div class="row title">
-          <div class="col-md-9">
+          <div class="col-md-12">
             <h1>Quick Scope
               <small> 16'</small>
             </h1>
           </div>
-          <div class="col-md-3">
-            <button type="button" class="btn btn-primary btn-lg btn-order">Order Now</button>
-          </div>
+
         </div>
         <div class="row">
           <div class="col-md-12">
@@ -58,6 +56,7 @@
               <div class="col-md-6">
                 <h2>$2,299</h2>
                 <p>Ships within 48 hours</p>
+                <form action="https://www.paypal.com/cgi-bin/webscr" method="post" target="paypal"><input name="cmd" type="hidden" value="_cart"> <input name="business" type="hidden" value="info@sportscopevideo.com"> <input name="lc" type="hidden" value="US"> <input name="item_name" type="hidden" value="Quick Scope '16 Coach's Pole"> <input name="amount" type="hidden" value="2299.00"> <input name="currency_code" type="hidden" value="USD"> <input name="button_subtype" type="hidden" value="products"> <input name="no_note" type="hidden" value="0"> <input name="shipping" type="hidden" value="100.00"> <input name="add" type="hidden" value="1"> <input name="bn" type="hidden" value="PP-ShopCartBF:order.png:NonHostedGuest"> <input alt="PayPal - The safer, easier way to pay online!" name="submit" src="img/order.svg" type="image"></form>
               </div>
             </div>
           </div>
@@ -86,11 +85,13 @@
         <div class="panel-group" id="accordion">
           <!-- /.panel -->
           <div class="panel panel-default">
+            <a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion" href="#collapseOne">
             <div class="panel-heading">
               <h4 class="panel-title">
-                <a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion" href="#collapseOne">Sony Camcorder &amp; Memory Card</a>
+                Sony Camcorder &amp; Memory Card
               </h4>
             </div>
+          </a>
             <div id="collapseOne" class="panel-collapse collapse">
               <div class="panel-body">
               <img src="./img/accessory/memory.jpg" alt="">
@@ -100,11 +101,13 @@
           </div>
           <!-- /.panel -->
           <div class="panel panel-default">
+          <a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion" href="#collapseTwo">
             <div class="panel-heading">
               <h4 class="panel-title">
-                <a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion" href="#collapseTwo">Batteries</a>
+                Batteries
               </h4>
             </div>
+          </a>
             <div id="collapseTwo" class="panel-collapse collapse">
               <div class="panel-body">
               <img src="./img/accessory/batteries.jpg" alt="">
@@ -116,11 +119,13 @@
           </div>
           <!-- /.panel -->
           <div class="panel panel-default">
+          <a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion" href="#collapseThree">
             <div class="panel-heading">
               <h4 class="panel-title">
-                <a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion" href="#collapseThree">Sony Remote</a>
+                Sony Remote
               </h4>
             </div>
+          </a>
             <div id="collapseThree" class="panel-collapse collapse">
               <div class="panel-body">
               <img src="./img/accessory/remote.png" alt="">
@@ -130,11 +135,13 @@
           </div>
           <!-- /.panel -->
           <div class="panel panel-default">
+          <a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion" href="#collapseFour">
             <div class="panel-heading">
               <h4 class="panel-title">
-                <a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion" href="#collapseFour">Swivel Mount</a>
+                Swivel Mount
               </h4>
             </div>
+          </a>
             <div id="collapseFour" class="panel-collapse collapse">
               <div class="panel-body">
                 <p>The camera mount screws onto the top of the Quick Scope pole, swivels 360 degrees, and tilts 90 degrees which allows the operator to get the exact camera angle they need. The camera mount also has a quick release plate that makes securing the camera quick and easy.</p>
@@ -143,11 +150,13 @@
           </div>
           <!-- /.panel -->
           <div class="panel panel-default">
+          <a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion" href="#collapseFive">
             <div class="panel-heading">
               <h4 class="panel-title">
-                <a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion" href="#collapseFive">LCD Monitor</a>
+                LCD Monitor
               </h4>
             </div>
+          </a>
             <div id="collapseFive" class="panel-collapse collapse">
               <div class="panel-body">
               <img src="./img/accessory/monitor.jpg" alt="">
@@ -162,11 +171,13 @@
         <div class="panel-group" id="accordion">
           <!-- /.panel -->
           <div class="panel panel-default">
+          <a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion" href="#collapseSix">
             <div class="panel-heading">
               <h4 class="panel-title">
-                <a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion" href="#collapseSix">Hard Case</a>
+                Hard Case
               </h4>
             </div>
+          </a>
             <div id="collapseSix" class="panel-collapse collapse">
               <div class="panel-body">
               <img src="./img/accessory/hardcase.jpg" alt="">
@@ -176,11 +187,13 @@
           </div>
           <!-- /.panel -->
           <div class="panel panel-default">
+          <a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion" href="#collapseSeven">
             <div class="panel-heading">
               <h4 class="panel-title">
-                <a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion" href="#collapseSeven">Monitor Rain Cover</a>
+                Monitor Rain Cover
               </h4>
             </div>
+          </a>
             <div id="collapseSeven" class="panel-collapse collapse">
               <div class="panel-body">
               <img src="./img/accessory/raincover-screen.jpg" alt="">
@@ -190,11 +203,13 @@
           </div>
           <!-- /.panel -->
           <div class="panel panel-default">
+          <a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion" href="#collapseEight">
             <div class="panel-heading">
               <h4 class="panel-title">
-                <a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion" href="#collapseEight">Rain Gear</a>
+                Rain Gear
               </h4>
             </div>
+          </a>
             <div id="collapseEight" class="panel-collapse collapse">
               <div class="panel-body">
               <img src="./img/accessory/raincover.jpg" alt="">
@@ -204,11 +219,13 @@
           </div>
           <!-- /.panel -->
           <div class="panel panel-default">
+          <a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion" href="#collapseNine">
             <div class="panel-heading">
               <h4 class="panel-title">
-                <a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion" href="#collapseNine">Travel Bag</a>
+                Travel Bag
               </h4>
             </div>
+          </a>
             <div id="collapseNine" class="panel-collapse collapse">
               <div class="panel-body">
                 <p>The travel bag houses the Quick Scope pole, cable, and rain gear. The electronics are housed inside the hard case for extra protection. The travel bag has two shoulder straps for easy transportation, is approximately 76" x 6", and fits inside most vehicles.</p> 
@@ -218,11 +235,13 @@
           </div>
           <!-- /.panel -->
           <div class="panel panel-default">
+          <a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion" href="#collapseTen">
             <div class="panel-heading">
               <h4 class="panel-title">
-                <a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion" href="#collapseTen">Media Reader</a>
+                Media Reader
               </h4>
             </div>
+          </a>
             <div id="collapseTen" class="panel-collapse collapse">
               <div class="panel-body">
               <img src="./img/accessory/reader.jpg" alt="">
@@ -236,11 +255,13 @@
         <div class="panel-group" id="accordion">
           <!-- /.panel -->
           <div class="panel panel-default">
+          <a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion" href="#collapseEleven">
             <div class="panel-heading">
               <h4 class="panel-title">
-                <a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion" href="#collapseEleven">12' Cable</a>
+                12' Cable
               </h4>
             </div>
+          </a>
             <div id="collapseEleven" class="panel-collapse collapse">
               <div class="panel-body">
               <img src="./img/accessory/cable.jpg" alt="">
