--- a/development/sport-scope-25.html
+++ b/development/sport-scope-25.html
@@ -26,19 +26,17 @@
     <div class="row">
 
       <div class="col-md-6">
-        <iframe src="https://player.vimeo.com/video/158360896" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
+        <iframe src="https://player.vimeo.com/video/158360896" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen class="iframe-lg"></iframe>
       </div>
 
       <div class="col-md-6">
         <div class="row title">
-          <div class="col-md-9">
+          <div class="col-md-12">
             <h1>Sport Scope
               <small> 25'</small>
             </h1>
           </div>
-          <div class="col-md-3">
-            <button type="button" class="btn btn-primary btn-lg btn-order">Order Now</button>
-          </div>
+
         </div>
         <div class="row">
           <div class="col-md-12">
@@ -58,6 +56,8 @@
               <div class="col-md-6">
                 <h2>$4,499</h2>
                 <p>Ships within 48 hours</p>
+                <form action="https://www.paypal.com/cgi-bin/webscr" method="post" target="paypal">
+<p><input name="cmd" type="hidden" value="_cart"> <input name="business" type="hidden" value="info@sportscopevideo.com"> <input name="lc" type="hidden" value="US"> <input name="item_name" type="hidden" value="Sport Scope 25'"> <input name="amount" type="hidden" value="4399.00"> <input name="currency_code" type="hidden" value="USD"> <input name="button_subtype" type="hidden" value="products"> <input name="no_note" type="hidden" value="0"> <input name="shipping" type="hidden" value="200.00"> <input name="add" type="hidden" value="1"> <input name="bn" type="hidden" value="PP-ShopCartBF:order.png:NonHostedGuest"> <input alt="PayPal - The safer, easier way to pay online!" name="submit" src="./img/order.svg" type="image"></form>
               </div>
             </div>
           </div>
@@ -85,11 +85,13 @@
 
         <div class="panel-group" id="accordion">
           <div class="panel panel-default">
+          <a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion" href="#collapseOne">
             <div class="panel-heading">
               <h4 class="panel-title">
-                <a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion" href="#collapseOne">Sony Camcorder &amp; Memory Card</a>
+                Sony Camcorder &amp; Memory Card
               </h4>
             </div>
+          </a>
             <div id="collapseOne" class="panel-collapse collapse">
               <div class="panel-body">
               <img src="./img/accessory/memory.jpg" alt="">
@@ -99,11 +101,13 @@
           </div>
           <!-- /.panel -->
           <div class="panel panel-default">
+          <a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion" href="#collapseTwo">
             <div class="panel-heading">
               <h4 class="panel-title">
-                <a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion" href="#collapseTwo">Batteries</a>
+                Batteries
               </h4>
             </div>
+          </a>
             <div id="collapseTwo" class="panel-collapse collapse">
               <div class="panel-body">
               <img src="./img/accessory/batteries.jpg" alt="">
@@ -115,11 +119,13 @@
           </div>
           <!-- /.panel -->
           <div class="panel panel-default">
+          <a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion" href="#collapseThree">
             <div class="panel-heading">
               <h4 class="panel-title">
-                <a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion" href="#collapseThree">Sony Remote</a>
+                Sony Remote
               </h4>
             </div>
+          </a>
             <div id="collapseThree" class="panel-collapse collapse">
               <div class="panel-body">
               <img src="./img/accessory/remote.png" alt="">
@@ -129,11 +135,13 @@
           </div>
           <!-- /.panel -->
           <div class="panel panel-default">
+          <a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion" href="#collapseFour">
             <div class="panel-heading">
               <h4 class="panel-title">
-                <a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion" href="#collapseFour">Pan/Tilt Head</a>
+                Pan/Tilt Head
               </h4>
             </div>
+          </a>
             <div id="collapseFour" class="panel-collapse collapse">
               <div class="panel-body">
                 <p>The Sport Scope 25' is a manually controlled system which pans and tilts the camera while is sits on a pivoting pan/tilt camera plate. The pan/tilt camera plate comes with a quick release plate on top of it to allow the operator to easily attach and position the camera.</p>
@@ -143,11 +151,13 @@
 
           <!-- /.panel -->
           <div class="panel panel-default">
+          <a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion" href="#collapseFive">
             <div class="panel-heading">
               <h4 class="panel-title">
-                <a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion" href="#collapseFive">LCD Monitor &amp; Monitor Plate</a>
+                LCD Monitor &amp; Monitor Plate
               </h4>
             </div>
+          </a>
             <div id="collapseFive" class="panel-collapse collapse">
               <div class="panel-body">
               <img src="./img/accessory/monitor.jpg" alt="">
@@ -161,25 +171,29 @@
         <div class="panel-group" id="accordion">
           <!-- /.panel -->
           <div class="panel panel-default">
+          <a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion" href="#collapseSix">
             <div class="panel-heading">
               <h4 class="panel-title">
-                <a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion" href="#collapseSix">Hard Case</a>
+                Hard Case
               </h4>
             </div>
+          </a>
             <div id="collapseSix" class="panel-collapse collapse">
               <div class="panel-body">
-              <img src="./img/accessory/hardcover.jpg" alt="">
+              <img src="./img/accessory/hardcase.jpg" alt="">
                 <p>The hard case protects and organizes all the important electronics that make up our complete end zone camera package. The hard case is an important part of our system because it ensures that the most vulnerable parts of the endzone camera are always safe and accounted for.</p> 
               </div>
             </div>
           </div>
           <!-- /.panel -->
           <div class="panel panel-default">
+          <a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion" href="#collapseSeven">
             <div class="panel-heading">
               <h4 class="panel-title">
-                <a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion" href="#collapseSeven">Sport Stool</a>
+                Sport Stool
               </h4>
             </div>
+          </a>
             <div id="collapseSeven" class="panel-collapse collapse">
               <div class="panel-body">
                 <p>The Sport Scope 25' is the only endzone camera that supplies the user with everything they need to comfortably sit down while they operate their end zone camera. The sports stool packs up and fits in the larger travel bag.</p>
@@ -188,11 +202,13 @@
           </div>
           <!-- /.panel -->
           <div class="panel panel-default">
+          <a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion" href="#collapseEight">
             <div class="panel-heading">
               <h4 class="panel-title">
-                <a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion" href="#collapseEight">Rain Gear</a>
+                Rain Gear
               </h4>
             </div>
+          </a>
             <div id="collapseEight" class="panel-collapse collapse">
               <div class="panel-body">
                 <p>The Sport Scope comes with a lens hood and rain cover that protects both the camcorder and the pan/tilt head for both the Sport Scope 30' and 25' from harsh weather. The lens hood screws on the front of the camcorder and the 100% waterproof cover protects the camcorder and pan/tilt head.</p>              
@@ -201,11 +217,13 @@
           </div>
           <!-- /.panel -->
           <div class="panel panel-default">
+          <a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion" href="#collapseNine">
             <div class="panel-heading">
               <h4 class="panel-title">
-                <a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion" href="#collapseNine">Level</a>
+                Level
               </h4>
             </div>
+          </a>
             <div id="collapseNine" class="panel-collapse collapse">
               <div class="panel-body">
               <img src="./img/accessory/level.jpg" alt="">
@@ -216,11 +234,13 @@
           </div>
           <!-- /.panel -->
           <div class="panel panel-default">
+          <a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion" href="#collapseTen">
             <div class="panel-heading">
               <h4 class="panel-title">
-                <a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion" href="#collapseTen">Media Reader</a>
+                Media Reader
               </h4>
             </div>
+          </a>
             <div id="collapseTen" class="panel-collapse collapse">
               <div class="panel-body">
               <img src="./img/accessory/reader.jpg" alt="">
@@ -234,11 +254,13 @@
         <div class="panel-group" id="accordion">
           <!-- /.panel -->
           <div class="panel panel-default">
+          <a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion" href="#collapseEleven">
             <div class="panel-heading">
               <h4 class="panel-title">
-                <a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion" href="#collapseEleven">Travel Bag</a>
+                Travel Bag
               </h4>
             </div>
+          </a>
             <div id="collapseEleven" class="panel-collapse collapse">
               <div class="panel-body">
                 <p>The Sport Scope 30' or 25' and all accessories fit inside the portable travel bag. The bag is made of ballistic nylon and is padded on all sides, which prevents damage during transportation. Some end zone cameras either do not come with a travel bag or they come with several, which makes the process of moving the end zone camera much more complicated. The Sport Scope's wheel plate also connects to the bag making transportation a breeze even through thick grass and mud. Other system's bags either come with small plastic wheels or with no wheels at all, which makes transporting the end zone camera much more difficult.</p> 
@@ -248,11 +270,13 @@
           </div>
           <!-- /.panel -->
           <div class="panel panel-default">
+          <a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion" href="#collapseTwelve">
             <div class="panel-heading">
               <h4 class="panel-title">
-                <a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion" href="#collapseTwelve">25' Cable</a>
+                25' Cable
               </h4>
             </div>
+          </a>
             <div id="collapseTwelve" class="panel-collapse collapse">
               <div class="panel-body">
               <img src="./img/accessory/cable.jpg" alt="">
@@ -262,11 +286,13 @@
           </div>
           <!-- /.panel -->
           <div class="panel panel-default">
+          <a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion" href="#collapseThirteen">
             <div class="panel-heading">
               <h4 class="panel-title">
-                <a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion" href="#collapseThirteen">Ground Stakes</a>
+                Ground Stakes
               </h4>
             </div>
+          </a>
             <div id="collapseThirteen" class="panel-collapse collapse">
               <div class="panel-body">
                 <p>The Sport Scope comes standard with ground stakes that stake through each leg's foot. The ground stakes ensure that the endzone camera tower will not fall over in windy conditions. If you play on turf you can place sandbags on each foot of the endzone camera.</p>
@@ -275,11 +301,13 @@
           </div>
           <!-- /.panel -->
           <div class="panel panel-default">
+          <a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion" href="#collapseFourteen">
             <div class="panel-heading">
               <h4 class="panel-title">
-                <a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion" href="#collapseFourteen">Bottom Rain Gear</a>
+                Bottom Rain Gear
               </h4>
             </div>
+          </a>
             <div id="collapseFourteen" class="panel-collapse collapse">
               <div class="panel-body">
                 <p>The Sport Scope 25' end zone camera comes standard with a clear cover for the camera remote that is 100% waterproof and a clear cover that protects the 9" monitor and battery from harsh weather. Without this important piece of rain gear it would be too risky to use an endzone camera is harsh weather.</p>
@@ -288,11 +316,13 @@
           </div>
           <!-- /.panel -->
           <div class="panel panel-default">
+          <a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion" href="#collapseFifteen">
             <div class="panel-heading">
               <h4 class="panel-title">
-                <a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion" href="#collapseFifteen">Tilt Handle &amp; Reel</a>
+                Tilt Handle &amp; Reel
               </h4>
             </div>
+          </a>
             <div id="collapseFifteen" class="panel-collapse collapse">
               <div class="panel-body">
                 <p>The Sport Scope 25' allows the operator to pan and tilt the camera with a tilt handle and cable reel. The handle is attached to the 25' mast and pans the camera right and left while the cable reel attaches to the camera plate at the top of the mast. The camera will tilt up and down as the tilt handle is moved up and down. For more information check out our Sport Scope 25' set up video.</p> 
