--- a/development/sport-scope-30.html
+++ b/development/sport-scope-30.html
@@ -26,19 +26,17 @@
     <div class="row">
 
       <div class="col-md-6">
-        <iframe src="https://player.vimeo.com/video/158247003" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
+        <iframe src="https://player.vimeo.com/video/158247003" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen class="iframe-lg"></iframe>
       </div>
 
       <div class="col-md-6">
         <div class="row title">
-          <div class="col-md-9">
+          <div class="col-md-12">
             <h1>Sport Scope
               <small> 30'</small>
             </h1>
           </div>
-          <div class="col-md-3">
-            <button type="button" class="btn btn-primary btn-lg btn-order">Order Now</button>
-          </div>
+
         </div>
         <div class="row">
           <div class="col-md-12">
@@ -60,6 +58,8 @@
                 <h2>$4,199</h2>
                 <h6>Offer Through March 31, 2016</h6>
                 <p>Ships within 48 hours</p>
+                <form action="https://www.paypal.com/cgi-bin/webscr" method="post" target="paypal">
+<input name="cmd" type="hidden" value="_cart"> <input name="business" type="hidden" value="info@sportscopevideo.com"> <input name="lc" type="hidden" value="US"> <input name="item_name" type="hidden" value="Sport Scope 30'"> <input name="amount" type="hidden" value="4199.00"> <input name="currency_code" type="hidden" value="USD"> <input name="button_subtype" type="hidden" value="products"> <input name="no_note" type="hidden" value="0"> <input name="shipping" type="hidden" value="200.00"> <input name="add" type="hidden" value="1"> <input name="bn" type="hidden" value="PP-ShopCartBF:order.png:NonHostedGuest"> <input alt="PayPal - The safer, easier way to pay online!" name="submit" type="image" src="./img/order.svg"></form>
               </div>
             </div>
           </div>
@@ -118,11 +118,13 @@
           </div>
           <!-- /.panel -->
           <div class="panel panel-default">
+          <a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion" href="#collapseThree">
             <div class="panel-heading">
               <h4 class="panel-title">
-                <a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion" href="#collapseThree">Sony Remote</a>
+                Sony Remote
               </h4>
             </div>
+          </a>
             <div id="collapseThree" class="panel-collapse collapse">
               <div class="panel-body">
               <img src="./img/accessory/remote.png" alt="">
@@ -132,11 +134,13 @@
           </div>
           <!-- /.panel -->
           <div class="panel panel-default">
+          <a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion" href="#collapseFour">
             <div class="panel-heading">
               <h4 class="panel-title">
-                <a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion" href="#collapseFour">Pan/Tilt Head &amp; Joystick</a>
+                Pan/Tilt Head &amp; Joystick
               </h4>
             </div>
+          </a>
             <div id="collapseFour" class="panel-collapse collapse">
               <div class="panel-body">
               <img src="./img/accessory/joystick.jpg" alt="">
@@ -146,11 +150,13 @@
           </div>
           <!-- /.panel -->
           <div class="panel panel-default">
+          <a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion" href="#collapseFive">
             <div class="panel-heading">
               <h4 class="panel-title">
-                <a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion" href="#collapseFive">LCD Monitor &amp; Monitor Plate</a>
+                LCD Monitor &amp; Monitor Plate
               </h4>
             </div>
+          </a>
             <div id="collapseFive" class="panel-collapse collapse">
               <div class="panel-body">
               <img src="./img/accessory/monitor.jpg" alt="">
@@ -164,11 +170,13 @@
         <div class="panel-group" id="accordion">
           <!-- /.panel -->
           <div class="panel panel-default">
+          <a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion" href="#collapseSix">
             <div class="panel-heading">
               <h4 class="panel-title">
-                <a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion" href="#collapseSix">Hard Case</a>
+                Hard Case
               </h4>
             </div>
+          </a>
             <div id="collapseSix" class="panel-collapse collapse">
               <div class="panel-body">
               <img src="./img/accessory/hardcase.jpg" alt="">
@@ -178,11 +186,13 @@
           </div>
           <!-- /.panel -->
           <div class="panel panel-default">
+          <a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion" href="#collapseSeven">
             <div class="panel-heading">
               <h4 class="panel-title">
-                <a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion" href="#collapseSeven">Sports Chair</a>
+                Sports Chair
               </h4>
             </div>
+          </a>
             <div id="collapseSeven" class="panel-collapse collapse">
               <div class="panel-body">
               <img src="./img/accessory/chair.jpg" alt="">
@@ -192,11 +202,13 @@
           </div>
           <!-- /.panel -->
           <div class="panel panel-default">
+          <a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion" href="#collapseEight">
             <div class="panel-heading">
               <h4 class="panel-title">
-                <a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion" href="#collapseEight">Rain Gear</a>
+                Rain Gear
               </h4>
             </div>
+          </a>
             <div id="collapseEight" class="panel-collapse collapse">
               <div class="panel-body">
                 <p>The Sport Scope comes with a lens hood and rain cover that protects both the camcorder and the pan/tilt head for both the Sport Scope 30' and 25' from harsh weather. The lens hood screws on the front of the camcorder and the 100% waterproof cover protects the camcorder and pan/tilt head.</p>           
@@ -205,11 +217,13 @@
            </div>
            <!-- /.panel -->
            <div class="panel panel-default">
+          <a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion" href="#collapseNine">
             <div class="panel-heading">
               <h4 class="panel-title">
-                <a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion" href="#collapseNine">Level</a>
+                Level
               </h4>
             </div>
+          </a>
             <div id="collapseNine" class="panel-collapse collapse">
               <div class="panel-body">
               <img src="./img/accessory/level.jpg" alt="">
@@ -219,11 +233,13 @@
           </div>
           <!-- /.panel -->
           <div class="panel panel-default">
+          <a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion" href="#collapseTen">
             <div class="panel-heading">
               <h4 class="panel-title">
-                <a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion" href="#collapseTen">Media Reader</a>
+                Media Reader
               </h4>
             </div>
+          </a>
             <div id="collapseTen" class="panel-collapse collapse">
               <div class="panel-body">
               <img src="./img/accessory/reader.jpg" alt="">
@@ -237,11 +253,13 @@
         <div class="panel-group" id="accordion">
           <!-- /.panel -->
           <div class="panel panel-default">
+          <a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion" href="#collapseEleven">
             <div class="panel-heading">
               <h4 class="panel-title">
-                <a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion" href="#collapseEleven">Travel Bag</a>
+                Travel Bag
               </h4>
             </div>
+          </a>
             <div id="collapseEleven" class="panel-collapse collapse">
               <div class="panel-body">
                 <p>The Sport Scope 30' or 25' and all accessories fit inside the portable travel bag. The bag is made of ballistic nylon and is padded on all sides, which prevents damage during transportation. Some end zone cameras either do not come with a travel bag or they come with several, which makes the process of moving the end zone camera much more complicated. The Sport Scope's wheel plate also connects to the bag making transportation a breeze even through thick grass and mud. Other system's bags either come with small plastic wheels or with no wheels at all, which makes transporting the end zone camera much more difficult.</p> 
@@ -250,11 +268,13 @@
           </div>
           <!-- /.panel -->
           <div class="panel panel-default">
+          <a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion" href="#collapseTwelve">
             <div class="panel-heading">
               <h4 class="panel-title">
-                <a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion" href="#collapseTwelve">30' Cable</a>
+                30' Cable
               </h4>
             </div>
+          </a>
             <div id="collapseTwelve" class="panel-collapse collapse">
               <div class="panel-body">
               <img src="./img/accessory/cable.jpg" alt="">
@@ -264,11 +284,13 @@
           </div>
           <!-- /.panel -->
           <div class="panel panel-default">
+          <a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion" href="#collapseThirteen">
             <div class="panel-heading">
               <h4 class="panel-title">
-                <a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion" href="#collapseThirteen">Ground Stakes</a>
+                Ground Stakes
               </h4>
             </div>
+          </a>
             <div id="collapseThirteen" class="panel-collapse collapse">
               <div class="panel-body">
                 <p>The Sport Scope comes standard with ground stakes that stake through each leg's foot. The ground stakes ensure that the endzone camera tower will not fall over in windy conditions. If you play on turf you can place sandbags on each foot of the endzone camera.</p>
@@ -277,11 +299,13 @@
           </div>
           <!-- /.panel -->
           <div class="panel panel-default">
+          <a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion" href="#collapseFourteen">
             <div class="panel-heading">
               <h4 class="panel-title">
-                <a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion" href="#collapseFourteen">Rain Cover</a>
+                Rain Cover
               </h4>
             </div>
+          </a>
             <div id="collapseFourteen" class="panel-collapse collapse">
               <div class="panel-body">
               <img src="./img/accessory/raincover.jpg" alt="">
