--- a/footer.html
+++ b/footer.html
@@ -17,7 +17,7 @@
           <p><a href="mailto:info@sportscopevideo.com">info@sportscopevideo.com</a></p>
         </div>
         <div class="col-md-1"></div>
-        <div class="col-md-2">
+        <div class="col-md-2 col-sm-6 col-xs-6">
           <button type="button" class="btn btn-donate"><h4>Donate to </h4><img src="./img/specialOlympics.svg" alt="special Olympics"></button>
         </div>
       </div>
